# meme-generator-rs

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml
.github/workflows/: back.yml  build.yaml  release.yml
meme_generator_memes/src/memes/: capoo_strike.rs
meme_generator_node/: Cargo.toml  package.json
meme_generator_node/src/: lib.rs
meme_generator_node/src/resources/: mod.rs
meme_generator_node/src/tools/: image_operations.rs  mod.rs
