[workspace]
members = [
    "meme_generator",
    "meme_generator_cli",
    "meme_generator_core",
    "meme_generator_memes",
    "meme_generator_node",
    "meme_generator_py",
    "meme_generator_server",
    "meme_generator_utils",
    "meme_options_derive",
]
resolver = "2"

[workspace.package]
version = "0.2.2"
authors = ["meetwq <meetwq@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/MemeCrafters/meme-generator-rs"
repository = "https://github.com/MemeCrafters/meme-generator-rs"
edition = "2024"
